--- a/build.gradle
+++ b/build.gradle
@@ -19,4 +19,8 @@ test {
     testLogging {
         events "passed", "skipped", "failed"
     }
+    reports {
+        junitXml.enabled = true
+        html.enabled = true
+    }
 }
