--- a/build.gradle
+++ b/build.gradle
@@ -5,6 +5,12 @@ plugins {
 group 'org.example'
 version '1.0-SNAPSHOT'
 
+//java {
+//    toolchain {
+//        languageVersion.set(JavaLanguageVersion.of(11))
+//    }
+//}
+
 repositories {
     mavenCentral()
 }
