--- a/build.gradle
+++ b/build.gradle
@@ -22,6 +22,7 @@ dependencies {
 }
 
 test {
+    failFast = true
     useJUnitPlatform()
     testLogging {
         events "passed", "skipped", "failed"
